# SimplePong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: ball.cpp  ball.h  paddle.cpp  paddle.h  pong.cpp  pong.h
src/engine/: game.cpp  game.h  gameobject.cpp  gameobject.h
